# metaDAO

./: Anchor.toml  Cargo.toml  README.md  package.json  run.sh
.github/workflows/: anchor-test.yaml  deploy-buffer.yaml  generate-verifiable-builds.yaml  verify-build.yaml
docs/: README.md  SUMMARY.md  metadao-1.md
docs/futarchy/: eli5.md
docs/implementation/: program-architecture.md
docs/media-kit/: faas.md
docs/metadao/: legal.md  meta.md  overview.md
docs/using-the-platform/: creating-proposals.md  trading-proposals.md  value-resolved-decision-markets.md
programs/amm/: Cargo.toml
programs/amm/src/: lib.rs
programs/amm/src/instructions/: add_liquidity.rs  crank_that_twap.rs  create_amm.rs  swap.rs
programs/amm/src/state/: amm.rs
programs/autocrat/: Cargo.toml
programs/autocrat/src/: error.rs  events.rs  lib.rs
programs/autocrat/src/instructions/: execute_proposal.rs  finalize_proposal.rs  initialize_dao.rs  initialize_proposal.rs  update_dao.rs
programs/autocrat/src/state/: dao.rs
programs/autocrat_migrator/: Cargo.toml
programs/conditional_vault/: Cargo.toml
programs/conditional_vault/src/: error.rs  events.rs  lib.rs
programs/conditional_vault/src/instructions/: add_metadata_to_conditional_tokens.rs  common.rs  initialize_conditional_vault.rs  initialize_question.rs  merge_tokens.rs  mod.rs  redeem_tokens.rs  resolve_question.rs  split_tokens.rs
programs/conditional_vault/src/state/: conditional_vault.rs  question.rs
programs/launchpad/: Cargo.toml
programs/launchpad/src/: error.rs  events.rs  lib.rs
programs/launchpad/src/instructions/: claim.rs  complete_launch.rs  fund.rs  initialize_launch.rs  mod.rs  refund.rs  start_launch.rs
programs/launchpad/src/state/: funding_record.rs  launch.rs  mod.rs
programs/optimistic_timelock/: Cargo.toml
scripts/: addV03Metadata.ts  createProposal.ts  createV04DAO.ts  createV04Proposal.ts  initializeLaunch.ts  initializeProposal.ts  resolveOutcome.ts  setupDevnet.ts
scripts/assets/CLOUD/: fCLOUD.json  pCLOUD.json
scripts/assets/CLOUD-USDC/: fUSDC.json  pUSDC.json
scripts/assets/DRIFT/: fDRIFT.json  pDRIFT.json
scripts/assets/MNDE/: fMNDE.json  pMNDE.json
scripts/assets/MTN/: MTN.json
sdk/: package.json  tsconfig.json
sdk/src/v0.3/: AmmClient.ts  AutocratClient.ts  ConditionalVaultClient.ts  FutarchyClient.ts  index.ts
sdk/src/v0.3/types/: index.ts
sdk/src/v0.3/utils/: ammMath.ts  index.ts
sdk/src/v0.4/: AmmClient.ts  AutocratClient.ts  ConditionalVaultClient.ts  LaunchpadClient.ts  constants.ts  index.ts
sdk/src/v0.4/idl/: amm.json  autocrat.json  autocrat_migrator.json  conditional_vault.json  optimistic_timelock.json
sdk/src/v0.4/types/: amm.ts  autocrat.ts  autocrat_migrator.ts  conditional_vault.ts  index.ts  launchpad.ts  optimistic_timelock.ts
sdk/src/v0.4/utils/: cu.ts  pda.ts  priceMath.ts
tests/: main.test.ts  utils.ts
tests/amm/: amm.ts  main.test.ts
tests/amm/integration/: ammLifecycle.test.ts
tests/amm/unit/: addLiquidity.test.ts  crankThatTwap.test.ts  initializeAmm.test.ts  removeLiquidity.test.ts  swap.test.ts
tests/autocrat/: autocrat.ts  main.test.ts
tests/autocratMigrator/: migrator.ts
tests/conditionalVault/: main.test.ts  unit.ts
tests/conditionalVault/integration/: binaryPredictionMarket.test.ts  multiOptionPredictionMarket.test.ts  scalarGrantMarket.test.ts
tests/conditionalVault/unit/: addMetadataToConditionalTokens.test.ts  initializeConditionalVault.test.ts  initializeQuestion.test.ts  mergeTokens.test.ts  redeemTokens.test.ts  splitTokens.test.ts
tests/fixtures/: raydium-amm-config  raydium-create-pool-fee-receive  usdc
tests/integration/: fullLaunch.test.ts  mintAndSwap.test.ts  scalarMarkets.test.ts  twap.test.ts
tests/launchpad/: main.test.ts  utils.ts
tests/launchpad/unit/: claim.test.ts  completeLaunch.test.ts  fund.test.ts  initializeLaunch.test.ts  refund.test.ts  startLaunch.test.ts
tests/optimisticTimelock/: timelock.ts
