[package]
name = "autocrat"
version = "0.4.0"
description = "SVM-based program for running futarchy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "autocrat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-security-txt = { workspace = true }
conditional_vault = { path = "../conditional_vault", features = ["cpi"] }
amm = { path = "../amm", features = ["cpi"] }

[dev-dependencies]
ahash = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
