[package]
name = "conditional_vault"
version = "0.4.0"
description = "SVM-based program for minting conditional tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "conditional_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
production = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed", "event-cpi"] }
anchor-spl = { workspace = true, features = ["metadata"] }
solana-security-txt = { workspace = true }

[dev-dependencies]
ahash = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
