[package]
name = "timelock"
version = "0.3.0"
description = "Optimistic timelock"
authors = ["Proph3t <metaproph3t@protonmail.com>, Henry"]
edition = "2021"
repository = "https://github.com/metaDAOproject/futarchy"
categories = ["cryptography::cryptocurrencies"]
keywords = ["solana", "defi", "ponzu"]

[lib]
crate-type = ["cdylib", "lib"]
name = "optimistic_timelock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
solana-security-txt = { workspace = true }

[dev-dependencies]
ahash = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
